--- a/package.json
+++ b/package.json
@@ -3,15 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "start": "vue-cli-service serve --host localhost",
+    "build:client": "vue-cli-service build --dest dist/client",
+    "build:server": "cross-env SSR=true vue-cli-service build --dest dist/server",
+    "cleanBuild": "rm -rf ./dist",
+    "build": "npm run build:client && npm run build:server"
   },
   "dependencies": {
+    "@vue/server-renderer": "^3.2.21",
     "core-js": "^3.6.5",
+    "cross-env": "^7.0.3",
+    "express": "^4.17.1",
+    "serialize-javascript": "^6.0.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0"
+    "vuex": "^4.0.0-0",
+    "webpack-manifest-plugin": "^4.0.2",
+    "webpack-node-externals": "^3.0.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.18.0",
