--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,7 @@
     "src/**/*.vue",
     "tests/**/*.ts",
     "tests/**/*.tsx"
-  ],
+, "src/main.server.js", "src/main.js"  ],
   "exclude": [
     "node_modules"
   ]
